Correcting radius on small and large buttons

--- a/src/scss/_custom_variables.scss
+++ b/src/scss/_custom_variables.scss
@@ -241,8 +241,8 @@ $border-color:                $utorange !default;
 
 // scss-docs-start border-radius-variables
 $border-radius:               0 !default;
-$border-radius-sm:            .2rem !default;
-$border-radius-lg:            .3rem !default;
+$border-radius-sm:            0 !default;
+$border-radius-lg:            0 !default;
 $border-radius-pill:          50rem !default;
 
 
